[project]
name = "scolioscan-pro-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "google-api-python-client>=2.184.0",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "itsdangerous>=2.2.0",
    "requests>=2.32.5",
    "PyJWT>=2.8.0",
    "jwt>=1.4.0",
]
